--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,10 @@ button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
 }
 
+.submit-button-val:hover {
+	background: #00D26A !important;
+}
+
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
