minor style changes and search functionality

--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,14 @@
 }
 
 button {
-	border-radius: 8px;
 	border: 1px solid transparent;
-	font-size: 1em;
-	font-weight: 500;
-	font-family: inherit;
-	background-color: black;
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
 button:hover {
 	border-color: orange;
+}
+.search-results {
+	position: absolute;
+	z-index: 1000;
 }
